--- a/config/database.yml
+++ b/config/database.yml
@@ -16,7 +16,7 @@ development:
   adapter:  postgresql
   host:     localhost
   encoding: unicode
-  database: cicin_shopper_development
+  database: shopper_development
   pool:     5
   username: shopper
   password:
@@ -44,7 +44,7 @@ test:
   adapter:  postgresql
   host:     localhost
   encoding: unicode
-  database: cicin_shopper_test
+  database: shopper_test
   pool:     5
   username: shopper
   password:
@@ -54,7 +54,7 @@ production:
   adapter:  postgresql
   host:     localhost
   encoding: unicode
-  database: cicin_shopper_production
+  database: shopper_production
   pool:     5
   username: shopper
   password:
